--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@ node_modules/
 dist/
 *.log
 .DS_Store
+
+# AI-related files
+.claude/
+.cursor/
+.aider*
+.continue/
+.copilot/
+.github/copilot/
+CLAUDE.md
+.cursorrules
+.cursorignore
