--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "dev": "tsup --watch",
     "build": "tsup",
     "prepublishOnly": "pnpm build",
-    "release": "./scripts/release.sh"
+    "release": "./scripts/release.sh",
+    "release:patch": "./scripts/release.sh patch",
+    "release:minor": "./scripts/release.sh minor",
+    "release:major": "./scripts/release.sh major"
   },
   "dependencies": {
     "@clack/prompts": "^0.9.1",
