--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.10",
+    "semver": "^7.7.3",
     "tsup": "^8.3.5",
     "typescript": "^5.7.3"
   },
